--- a/svn/source/tools_contrib.html
+++ b/svn/source/tools_contrib.html
@@ -282,17 +282,15 @@ subversion项目本身并不包括这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="asvn"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/asvn">asvn</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>Archive SVN (asvn) will allow the recording of file types not
-     normally handled by svn. Currently this includes devices,
-     symlinks and file ownership/permissions.
+  <p>Archive SVN可以记录一些通常svn不会处理的文件类型信息，目前这些记录信息包括设备，符号链接和文件所有权和访问权限。
   </p>
 
 
   <h3><a name="bash_completion"
     href="http://svn.collab.net/repos/svn/trunk/tools/client-side/bash_completion">bash_completion</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/client-side">tools/client-side</a>)</h3>
-  <p>Programmable completion for the Subversion svn command under bash.</p>
-  <p>Related files:
+  <p>针对SVN在bash环境下的命令行可编程自动补齐功能。</p>
+  <p>相关文件：
     <a href="http://svn.collab.net/repos/svn/trunk/tools/client-side/bash_completion_test">bash_completion_test</a>
   </p>
 
@@ -300,7 +298,7 @@ subversion项目本身并不包括这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="diff_to_logmsg_vim"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/vim/diff-to-logmsg.vim">diff-to-logmsg.vim</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/vim">contrib/client-side/vim</a>)</h3>
-  <p>Converts a 'diff -urp' to a log message skeleton.</p>
+  <p>将'diff -urp'命令输出内容转换成一个修改日志信息的结构。</p>
 
 
   <h3><a name="diff3wrap_bat"
@@ -318,19 +316,17 @@ subversion项目本身并不包括这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="dsvn_el"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/emacs/dsvn.el">dsvn.el</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/emacs/dsvn.el">contrib/client-side/emacs/dsvn.el</a>)</h3>
-  <p>A Subversion interface for Emacs, providing a similar interface as
-     pcl-cvs for CVS.
+  <p>一个Subersion提供给Emacs的接口，类似于CVS提供的pcl-cvs接口。
   </p>
-  <p>See also <a href="#psvn_el">psvn.el</a>.</p>
+  <p>同时参看 <a href="#psvn_el">psvn.el</a>.</p>
 
 
   <h3><a name="svnmucc_c"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmucc/svnmucc.c">svnmucc.c</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmucc">contrib/client-side/svnmucc</a>)</h3>
-  <p>Multiple URL Command Client: Combine a list of mv, cp and rm commands
-     on URLs into a single commit.
+  <p>多个URL命令的客户端（Multiple URL Command Client）：可以将通过URL方式提交的一系列mv，cp和rm命令合并成一个提交命令。
   </p>
-  <p>Related files:
+  <p>相关文件:
     <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmucc/svnmucc-test.py">svnmucc-test.py</a>
   </p>
 
@@ -338,47 +334,46 @@ subversion项目本身并不包括这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="psvn_el"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/emacs/psvn.el">psvn.el</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/emacs/psvn.el">contrib/client-side/emacs/psvn.el</a>)</h3>
-  <p>A Subversion interface for Emacs, providing a similar interface as
-     pcl-cvs for CVS.
+  <p>一个Subersion提供给Emacs的接口，类似于CVS提供的pcl-cvs接口。
   </p>
-  <p>See also <a href="#dsvn_el">dsvn.el</a>.</p>
+  <p>同时参看 <a href="#dsvn_el">dsvn.el</a>.</p>
 
 
   <h3><a name="search_svnlog_pl"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/search-svnlog.pl">search-svnlog.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>Show log messages matching a certain pattern.</p>
+  <p>检索显示包含某个特别内容的日志信息。</p>
 
 
   <h3><a name="server_version_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/client-side/server-version.py">server-version.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/client-side">tools/client-side</a>)</h3>
-  <p>Print a Subversion server's version number.</p>
+  <p>显示Subersion服务器的版本号。</p>
 
-  <p><a name="server_vsn_py">server-version.py was formerly known as server-vsn.py</a></p>
+  <p><a name="server_vsn_py">server-version.py 之前的名字为server-vsn.py</a></p>
 
   <h3><a name="showchange_pl"
     href="http://svn.collab.net/repos/svn/trunk/tools/client-side/showchange.pl">showchange.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/client-side">tools/client-side</a>)</h3>
-  <p>Show the log message and diff for a revision.</p>
+  <p>显示一个修订版本的日志信息和精确修改内容。</p>
 
 
   <h3><a name="svn_clean"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn-clean">svn-clean</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>Wipes out unversioned files from SVN working copy.</p>
+  <p>从SVN的工作拷贝中删除没有版本记录的所有文件。</p>
 
 
   <h3><a name="svn_graph_pl"
     href="http://svn.collab.net/repos/svn/trunk/tools/client-side/svn-graph.pl">svn-graph.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/client-side">tools/client-side</a>)</h3>
-  <p>Produce a GraphViz .dot graph for the branch history of a node.</p>
+  <p>Produce a GraphViz .dot graph for the branch history of a node.为某一个节点的分支修订历史生成一个名为GraphViz .dot的统计图。</p>
 
 
   <h3><a name="svn_log_pl"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn-log.pl">svn-log.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>Generate a nice log format for the Subversion repository.</p>
+  <p>为Subersion的版本库生成一个美观的日志格式。</p>
 
 
   <h3><a name="svn_push_c"
@@ -392,10 +387,9 @@ subversion项目本身并不包括这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svn_resolve"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn-resolve">svn-resolve</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>Resolve Subversion conflicts using FileMerge.
+  <p>用Filemerge来解决Subersion的修订冲突。
   </p>
-  <p>(FileMerge is a graphical diff tool in the Mac OS X
-     Developer Tools.)
+  <p>(FileMerge是Mac OS中X开发工具软件包中的一个图形化的比较工具。)
   </p>
 
 
@@ -404,25 +398,23 @@ subversion项目本身并不包括这些程序代码，仅仅只是为了用户使用方便而发布它们。
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
   <p>GNU diff wrapper for FileMerge.
   </p>
-  <p>(FileMerge is a graphical diff tool in the Mac OS X
-     Developer Tools.)
+  <p>(FileMerge是Mac OS中X开发工具软件包中的一个图形化的比较工具。)
   </p>
 
 
   <h3><a name="svn_vim"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/vim/svn.vim">svn.vim</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/vim">contrib/client-side/vim</a>)</h3>
-  <p>Vim syntax hilighting for SVN commit log message template.</p>
+  <p>Vim所使用的实现SVN修订提交日志信息模板语法高亮的文件。</p>
 
 
   <h3><a name="svn2cl_sh"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn2cl/svn2cl.sh">svn2cl.sh</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn2cl">contrib/client-side/svn2cl</a>)</h3>
-  <p>Front end shell script for svn2cl.xsl, calls xsltproc with the
-     correct parameters.
+  <p>针对svn2cl.xsl的前端shell脚本，以正确的参数调用xsltproc。
   </p>
-  <p>See also <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn2cl/README">README</a>.</p>
-  <p>Related files:
+  <p>同时参看 <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn2cl/README">README</a>.</p>
+  <p>相关文件：
     <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn2cl/svn2cl.1">svn2cl.1</a>
     <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn2cl/svn2cl.xsl">svn2cl.xsl</a>
     <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn2cl/svn2html.css">svn2html.css</a>
@@ -433,45 +425,36 @@ subversion项目本身并不包括这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svn_all_diffs_pl"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_all_diffs.pl">svn_all_diffs.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>Perl script that gets the revisions that modified a specified
-     file or directory and prints the output of `svn diff' on between
-     all revisions that modified the file or directory.  Good for
-     seeing what changed over time and for tracking down when a
-     particular line in a file changed.
+  <p>一个perl脚本，用来获取修改了某个特定文件或者子目录的所有修订版本，并且显示用'svn diff'命令输出的所有这些修订版本的
+     修改内容。非常适用于追踪和观察一个文件中特定某一行的改变。
   </p>
 
 
   <h3><a name="svn_apply_autoprops_py"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_apply_autoprops.py">svn_apply_autoprops.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>This script reads the auto-properties defined in the
-     $HOME/.subversion/config file and applies them recursively to all
-     the files and directories in the current working copy.
+  <p>这个脚本会从$HOME/.subversion/config中读取预先定义好的想要自动实现
+     的属性，根据它们对当前工作拷贝中的所有文件和子目录进行递归修改。
   </p>
 
 
   <h3><a name="svn_export_empty_files_py"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_export_empty_files.py">svn_export_empty_files.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>Script to "export" from a Subversion repository a clean directory
-     tree of empty files instead of the content contained in those
-     files in the repository. The directory tree will also omit the
-     .svn directories.  This script was written to create a non-working
-     working copy that can be crawled with find or find's locate utility
-     to make it easier to find files.
+  <p>这个脚本用来从一个subversion版本库中导出一个具有相同目录结构，但是只包含版本库中所有文件
+     的文件名而不含有文件的实际内容。这个空目录树中也不包含有.svn子目录。目的是用于生成一个不是用于工作的工作拷贝，方便文件的
+     检索。
   </p>
 
 
   <h3><a name="svn_load_dirs_pl"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_load_dirs/svn_load_dirs.pl.in">svn_load_dirs.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_load_dirs">contrib/client-side/svn_load_dirs</a>)</h3>
-  <p>This Perl script is designed to load a number of directories into
-     Subversion.  This is useful if you have a number of .zip's or
-     tar.{Z,gz,bz2}'s for a particular package and want to load them into
-     Subversion.
+  <p>这个perl脚本是设计用来向subversion服务器中导入若干个子目录。当用户有一个包含有大量.zip文件或者tar.{Z,gz,bz2}文件
+     的文件包想要导入到subversion服务器中时，这个脚本尤其有用。
   </p>
-  <p>See also <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_load_dirs/svn_load_dirs.README">svn_load_dirs.README</a>.</p>
-  <p>Related files:
+  <p>同时参看 <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_load_dirs/svn_load_dirs.README">svn_load_dirs.README</a>.</p>
+  <p>相关文件：
     <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_load_dirs/svn_load_dirs_property_table.example">svn_load_dirs_property_table.example</a>
   </p>
 
@@ -479,22 +462,21 @@ subversion项目本身并不包括这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svn_update_pl"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_update.pl">svn_update.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>Run svn update and force it to produce conflicts for all
-     files which would be merged using diff3.
+  <p>运行svn update，强制对所有文件产生需要用diff3合并的冲突。
   </p>
-  <p>This is a workaround for <a
+  <p>工作区<a
        href="http://subversion.tigris.org/issues/show_bug.cgi?id=2048"
-     >issue 2048</a> which was fixed in r13383 and released in
-     svn 1.2.0.
+     >issue 2048</a> 在r13383中得到解决并且在
+     svn 1.2.0中发布。
   </p>
 
 
   <h3><a name="svncopy_pl"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy/svncopy.pl.in">svncopy.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy">contrib/client-side/svncopy</a>)</h3>
-  <p>Utility script for copying with branching/tagging.</p>
-  <p>See also <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy/svncopy.README">svncopy.README</a>.</p>
-  <p>Related files:
+  <p>Utility script for copying with branching/tagging.用于分支和标记拷贝的应用脚本。</p>
+  <p>同时参看 <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy/svncopy.README">svncopy.README</a>.</p>
+  <p>相关文件：
     <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy/testsvncopy.pl.in">testsvncopy.pl</a>
   </p>
 
@@ -502,14 +484,14 @@ subversion项目本身并不包括这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svnmerge_py"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmerge/svnmerge.py">svnmerge.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmerge">contrib/client-side/svnmerge</a>)</h3>
-  <p>Merge tracking script.</p>
-  <p>See also <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmerge/svnmerge.README">svnmerge.README</a>.</p>
+  <p>合并跟踪脚本。</p>
+  <p>同时参看 <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmerge/svnmerge.README">svnmerge.README</a>.</p>
 
 
   <h3><a name="svnmerge_sh"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmerge/svnmerge.sh">svnmerge.sh</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmerge">contrib/client-side/svnmerge</a>)</h3>
-  <p>Merge tracking script, predecessor of svnmerge.py.</p>
+  <p>合并跟踪脚本，是svnmerge.py的前身。</p>
 
 
   <h3><a name="vc_svn_el"
@@ -529,8 +511,8 @@ subversion项目本身并不包括这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="wcgrep"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/wcgrep">wcgrep</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>Useful for greping in a Subversion working copy.
-     Essentially it behaves the same way your grep command does.
+  <p>在一个在Subersion的工作目录中进行字符串查找的很有用工具，
+     在本质上和grep命令的功能是一样的。
   </p>
 </div>
 
